<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/sounds_header">

        <SeekBarPreference
            app:title="@string/music_volume"
            android:max="100"
            app:min="0"
            app:defaultValue="100"
            app:icon="@drawable/ic_round_volume_up_24" />

        <SeekBarPreference
            app:title="@string/sounds_volume"
            android:max="100"
            app:min="0"
            app:defaultValue="100"
            app:icon="@drawable/ic_round_volume_up_24" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/visuals_header">

        <SwitchPreferenceCompat
            app:key="stroke"
            app:summaryOff="@string/stroke_summary_off"
            app:summaryOn="@string/stroke_summary_on"
            app:title="@string/stroke_title" />

    </PreferenceCategory>

</PreferenceScreen>