<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_12"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="Tetris"
        android:textSize="48sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/app_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_start"
        style="@style/button_menu_style"
        android:text="@string/start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_stats"
        android:text="@string/statistics"
        style="@style/button_menu_style" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_settings"
        android:text="@string/settings"
        style="@style/button_menu_style" />

</LinearLayout>