<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_12"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@+id/button_start_game"
    android:padding="20dp"
    tools:context=".ui.admin.AdminActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_difficulty"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <AutoCompleteTextView
            android:id="@+id/text_difficulty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/difficulty"
            android:inputType="none"
            android:text="@string/normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_width"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_width"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/well_width"
                android:inputType="number"
                android:singleLine="true"
                android:text="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_height"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_height"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/well_height"
                android:inputType="number"
                android:singleLine="true"
                android:text="18" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_shapes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_block_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/block_editor" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="bottom"
            android:text="@string/save"
            android:textSize="24sp" />
    </FrameLayout>

</LinearLayout>