<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_12"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@+id/button_start_game"
    tools:context=".ui.editor.EditGameActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_round_arrow_back_24"
        app:navigationIconTint="@color/black"
        app:title="@string/edit_game" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/player_name"
            android:maxLength="20"
            android:singleLine="true"
            android:text="@string/unnamed_player" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_difficulty"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <AutoCompleteTextView
            android:id="@+id/text_difficulty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/difficulty"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_width"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_width"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/well_width"
                android:inputType="number"
                android:singleLine="true"
                android:text="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_height"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_height"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/well_height"
                android:inputType="number"
                android:singleLine="true"
                android:text="18" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_speed"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_speed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/game_speed"
            android:inputType="number"
            android:singleLine="true"
            android:text="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Выбранные фигуры: "/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_shapes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        tools:itemCount="2"
        tools:listitem="@layout/item_shape" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <RadioButton
            android:id="@+id/radio_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Игра по очкам"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Игра по времени"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            style="@style/button_secondary_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/editor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start_game"
            style="@style/button_primary_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/start" />

    </LinearLayout>

</LinearLayout>